Fixed jumbotron bottom padding on mobile devices by adjusting media query for socialcol

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -177,6 +177,12 @@ body {
   }*/
 }
 
+@media (max-width: 768px) {
+  #jumbotron.jumbotron {
+    min-height: 0px;
+  }
+}
+
 
 #instructions {
   background-color: $color1darker;
